5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1585_1015.log
== TEST (2019-03-26 11:07:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
int(input("numeros:"))
min(a,b,c)
max(a,b,c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:13:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor1= int(input("numero:6"))
valor2= int(input("numero:2"))
valor3= int(input("numero:4"))
min(valor1,valor2,valor3)
max(valor1,valor2,valor3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:14:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor1= int(input("numero:6"))
valor2= int(input("numero:2"))
valor3= int(input("numero:4"))
min(valor1,valor2,valor3)
max(valor1,valor2,valor3)
-- EXECUTION TIME:
0.150681
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor1= int(input("numero:6"))
valor2= int(input("numero:2"))
valor3= int(input("numero:4"))
min(valor1,valor2,valor3)
max(valor1,valor2,valor3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    min(a,b,c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:17:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("valor:"))
b= int(input("valor:"))
c= int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:17:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a= int(input("valor:"))
b= int(input("valor:"))
c= int(input("valor:"))
print(min(a,b,c))
print((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))
-- EXECUTION TIME:
0.12723
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
